tests/reference/asr-kind_string_of_int-ed0ec70.stderr
semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
 --> a.f90:2:13
  |
2 |     integer('a') :: i
  |             ^^^
